--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+button{
+	radius:1px;
+	height:40px;
+	background-color:red;
+	color:white;
+	size: 50px;
+}
+div{
+	background-color:#f5f5f5;
+	width:50%;
+	padding: 50px;
+	margin-left:15%;
+	align-items:center;
+	justify-content:center;
+	text-align:center;
+}
+#btn{
+	text-style:bold;
+	border:none;
+	border-radius:20%;
+	width:30%;
+	height:60px;
+	font-size:15px;
+	font-weight:bold;
+}
