--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,34 @@
 /*  your css code here. If applicable */
-button{
-	radius:1px;
-	height:40px;
-	background-color:red;
-	color:white;
-	size: 50px;
-}
-div{
-	background-color:#f5f5f5;
-	width:50%;
+div {
+	position: relative;
+	width: 300px;
+	height: 550px;
+	background-color: rgba(0, 0, 0, 0.1);
 	padding: 50px;
-	margin-left:15%;
-	align-items:center;
-	justify-content:center;
-	text-align:center;
+	margin: auto;
+	box-shadow: 2px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 10px 10px 8px 10px #888888;
 }
-#btn{
-	text-style:bold;
-	border:none;
-	border-radius:20%;
-	width:30%;
-	height:60px;
-	font-size:15px;
-	font-weight:bold;
+
+h1 {
+	text-align: center;
+	font-size: 50px;
+	margin: 0;
+	
+}
+p {
+	text-align: center;
+	margin: 0;
+	font-size: 30px;
+	font-weight: bold;
+}
+#submit {
+	position: absolute;
+	padding: 20px 35px;
+	border-radius: 15px;
+	background-color: #f02055;
+	color: white;
+	font-size: 30px;
+	margin-top: 30px;
+	transform: translate(25%, 0%)
 }
