--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ p {
 	position: absolute;
 	padding: 20px 35px;
 	border-radius: 15px;
-	background-color: #f02055;
+	background-color: orangered;
 	color: white;
 	font-size: 30px;
 	margin-top: 30px;
