--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,35 @@
 /*  your css code here. If applicable */
-div {
-	position: relative;
-	width: 300px;
-	height: 550px;
-	background-color: rgba(0, 0, 0, 0.1);
+.card{
+	width: 250px;
 	padding: 50px;
-	margin: auto;
-	box-shadow: 2px 5px rgba(0, 0, 0, 0.1);
-	box-shadow: 10px 10px 8px 10px #888888;
-}
+	background-color: #f1f1f1;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	top: 50px;
+	left: 150px;
 
-h1 {
-	text-align: center;
-	font-size: 50px;
-	margin: 0;
 	
 }
-p {
-	text-align: center;
-	margin: 0;
-	font-size: 30px;
-	font-weight: bold;
+img{
+	width: 250px;
+
 }
-#submit {
-	position: absolute;
-	padding: 20px 35px;
-	border-radius: 15px;
-	background-color: orangered;
-	color: white;
-	font-size: 30px;
-	margin-top: 30px;
-	transform: translate(25%, 0%)
+button{
+	width: 150px;
+	height: 50px;
+	border-radius: 10px;
+	background-color:#fe625a;
+}
+.middle{
+	 padding-left: 20px;
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	width: 200px;
+}
+.card p{
+	font-size: 20px;
+	
 }
