--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,20 @@
 /*  your css code here. If applicable */
 .card{
-	width: 250px;
-	padding: 50px;
-	background-color: #f1f1f1;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	top: 50px;
-	left: 150px;
-
-	
+	width:300px;
+	height:450px;
+	background-color:rgb(250, 217, 288);
+	padding:20px;
+	box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
-img{
-	width: 250px;
-
+.img{
+	height:200px;
+	width:300px;
 }
-button{
-	width: 150px;
-	height: 50px;
-	border-radius: 10px;
-	background-color:#fe625a;
-}
-.middle{
-	 padding-left: 20px;
-	display:flex;
-	flex-direction: column;
-	align-items: center;
-	width: 200px;
-}
-.card p{
-	font-size: 20px;
+.btn{
+	border:none;
+	padding:15px;
+	background-color:orangered;
+	color:white;
+	border-radius:10px;
 	
 }
